--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <title>Paper Doll App</title>
 </head>
 
 <body>
@@ -25,15 +25,7 @@
   <div id="app"></div>
   <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
   <script src="//html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-  <script>
-    // $( function() {
-    //   $.each($( ".drag-items img" ), function(item){
-    //       $(item).draggable({'containment': "#mixer"});
-    //   })
-     
-    // } );
-    </script>
+  
 </body>
 
 </html>
